--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,6 +80,7 @@ jobs:
           tag_name: ${{ env.RELEASE_VERSION }}
           files: ./build/target/checkmarx-ast-teamcity-plugin.zip
           generate_release_notes: true
+          prerelease: ${{ inputs.rchannels != '' && inputs.rchannels != null }}
 
       - name: Release to marketplace
         run: |
