--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.checkmarx.teamcity</groupId>
-  <artifactId>checkmarx-ast-teamcity-plugin</artifactId>
+  <groupId>com.checkmarx.teamcitytest</groupId>
+  <artifactId>checkmarx-ast-teamcitytest-plugin</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <properties>
@@ -78,9 +78,9 @@
       </pluginManagement>
   </build>
   <modules>
-    <module>checkmarx-ast-teamcity-plugin-server</module>
-    <module>checkmarx-ast-teamcity-plugin-agent</module>
-    <module>checkmarx-ast-teamcity-plugin-common</module>
+    <module>checkmarx-ast-teamcitytest-plugin-server</module>
+    <module>checkmarx-ast-teamcitytest-plugin-agent</module>
+    <module>checkmarx-ast-teamcitytest-plugin-common</module>
     <module>build</module>
   </modules>
 
