--- a/checkmarx-ast-teamcity-plugin-server/pom.xml
+++ b/checkmarx-ast-teamcity-plugin-server/pom.xml
@@ -2,17 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>checkmarx-ast-teamcitytest-plugin</artifactId>
-    <groupId>com.checkmarx.teamcitytest</groupId>
+    <artifactId>checkmarx-ast-teamcity-plugin</artifactId>
+    <groupId>com.checkmarx.teamcity</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <artifactId>checkmarx-ast-teamcitytest-plugin-server</artifactId>
+  <artifactId>checkmarx-ast-teamcity-plugin-server</artifactId>
   <packaging>jar</packaging>
   <dependencies>
 
     <dependency>
-      <groupId>com.checkmarx.teamcitytest</groupId>
-      <artifactId>checkmarx-ast-teamcitytest-plugin-common</artifactId>
+      <groupId>com.checkmarx.teamcity</groupId>
+      <artifactId>checkmarx-ast-teamcity-plugin-common</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
@@ -54,7 +54,7 @@
               <goal>single</goal>
             </goals>
             <configuration>
-              <finalName>checkmarx-ast-teamcitytest-plugin-server</finalName>
+              <finalName>checkmarx-ast-teamcity-plugin-server</finalName>
               <appendAssemblyId>false</appendAssemblyId>
               <attach>false</attach>
               <descriptors>
