--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,9 +109,14 @@ jobs:
           clean="$(echo "${{ steps.convert.outputs.html }}" | awk '{gsub(/id=.[a-z]+/,"");print}' | tr -d '\n')"
           echo "$clean"
           echo "::set-output name=clean::$clean"
+
   notify:
-    uses: thechetantalwar/teams-notify@v2
-    with:
-      teams_webhook_url: ${{ secrets.TEAMS_WEBHOOK_URI }}
-      message: "<h1>Checkmarx TeamCity Plugin ${{ env.RELEASE_VERSION }}</h1>${{ steps.clean.outputs.clean }}"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Send a Notification
+        id: notify
+        uses: thechetantalwar/teams-notify@v2
+        with:
+          teams_webhook_url: ${{ secrets.TEAMS_WEBHOOK_URI }}
+          message: "<h1>Checkmarx TeamCity Plugin ${{ env.RELEASE_VERSION }}</h1>${{ steps.clean.outputs.clean }}"
     if: !inputs.rchannels
