--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -119,4 +119,4 @@ jobs:
         with:
           teams_webhook_url: ${{ secrets.TEAMS_WEBHOOK_URI }}
           message: "<h1>Checkmarx TeamCity Plugin ${{ env.RELEASE_VERSION }}</h1>${{ steps.clean.outputs.clean }}"
-    if: !inputs.rchannels
+    if: inputs.rchannels
