--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -118,5 +118,5 @@ jobs:
         uses: thechetantalwar/teams-notify@v2
         with:
           teams_webhook_url: ${{ secrets.TEAMS_WEBHOOK_URI }}
-          message: "<h1>Checkmarx TeamCity Plugin ${{ env.RELEASE_VERSION }}</h1>${{ steps.clean.outputs.clean }}"
-    if: inputs.rchannels
+          message: "<h1>Checkmarx TeamCity Plugin ${{ env.RELEASE_VERSION }}</h1>${{ needs.clean.outputs.clean }}"
+#    if: inputs.rchannels
