--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -110,13 +110,10 @@ jobs:
           echo "$clean"
           echo "::set-output name=clean::$clean"
 
-  notify:
-    runs-on: ubuntu-latest
-    steps:
       - name: Send a Notification
         id: notify
         uses: thechetantalwar/teams-notify@v2
         with:
           teams_webhook_url: ${{ secrets.TEAMS_WEBHOOK_URI }}
-          message: "<h1>Checkmarx TeamCity Plugin ${{ env.RELEASE_VERSION }}</h1>${{ needs.clean.outputs.clean }}"
-#    if: inputs.rchannels
+          message: "<h1>Checkmarx TeamCity Plugin ${{ env.RELEASE_VERSION }}</h1>${{ steps.clean.outputs.clean }}"
+        if: ${{ inputs.rchannels == '' || inputs.rchannels == null }}
