--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -21,5 +21,5 @@ jobs:
     uses: hugomachadoOrg/ast-teamcity-plugin/.github/workflows/release.yml@main
     with:
       tag: ${{ needs.set_tag.outputs.tag_name }}
-      rchannels: "nightly"
+      rbranch: "nightly"
     secrets: inherit
